# Preparation-for-NUEDC

PTZ control/: CMakeLists.txt
PTZ control/Core/Src/: gpio.c  tim.c  usart.c
control/2025E/Docs/: Firmware_Layers.md
control/2025E/Docs/云台方案/: yuntai.3mf  步进电机云台.3mf
control/2025E/Firmware/MSPA/: CMakeLists.txt  README.md  openocd.cfg
control/2025E/Firmware/MSPA/App/Inc/: app_mspa.h
control/2025E/Firmware/MSPA/App/Src/: app_mspa.c
control/2025E/Firmware/MSPA/BSP/Inc/: board.h  bsp_gpio.h  bsp_motor.h  bsp_timer.h  bsp_uart.h
control/2025E/Firmware/MSPA/BSP/Src/: board.c  bsp_gpio.c  bsp_motor.c  bsp_timer.c  bsp_uart.c
control/2025E/Firmware/MSPA/Control/Inc/: chassis_control.h  line_control.h  line_control_config.h  pid.h  wheel_speed_control.h  wheel_speed_control_config.h
control/2025E/Firmware/MSPA/Control/Src/: chassis_control.c  line_control.c  pid.c  wheel_speed_control.c
control/2025E/Firmware/MSPA/Core/: MSPA.syscfg
control/2025E/Firmware/MSPA/Core/Inc/: ti_msp_dl_config.h
control/2025E/Firmware/MSPA/Core/Src/: main.c  ti_msp_dl_config.c
control/2025E/Firmware/MSPA/Device/Inc/: linetrack.h  linetrack_config.h  mg513x.h  mg513x_config.h
control/2025E/Firmware/MSPA/Device/Src/: linetrack.c  mg513x.c
control/2025E/Firmware/MSPA/Driver/Inc/: linetrack.h  linetrack_config.h
control/2025E/Firmware/MSPA/Driver/Src/: linetrack.c
control/2025E/Firmware/MSPA/Driver/ti/driverlib/: dl_timer.h
control/2025E/Firmware/MSPA/Protocol/Inc/: ring_buffer.h
control/2025E/Firmware/MSPA/Protocol/Src/: ring_buffer.c
control/2025E/Firmware/MSPA/Service/Inc/: chassis_task.h  communication_service.h  communication_service_config.h  trajectory_progress_config.h  trajectory_progress_service.h  vofa_service.h
control/2025E/Firmware/MSPA/Service/Src/: chassis_task.c  communication_service.c  trajectory_progress_service.c  vofa_service.c
control/2025E/Firmware/MSPA/tools/: generate_sysconfig.ps1
control/2025E/Firmware/MSPB/: CMakeLists.txt  README.md
control/2025E/Firmware/MSPB/App/Inc/: app_mspb.h
control/2025E/Firmware/MSPB/App/Src/: app_mspb.c
control/2025E/Firmware/MSPB/BSP/Inc/: bsp_gimbal.h  bsp_gimbal_config.h  bsp_timer.h  bsp_uart.h
control/2025E/Firmware/MSPB/BSP/Src/: bsp_gimbal.c  bsp_timer.c  bsp_uart.c
control/2025E/Firmware/MSPB/Control/Inc/: gimbal_axis.h  gimbal_axis_config.h
control/2025E/Firmware/MSPB/Control/Src/: gimbal_axis.c
control/2025E/Firmware/MSPB/Core/: MSPB.syscfg
control/2025E/Firmware/MSPB/Core/Inc/: ti_msp_dl_config.h
control/2025E/Firmware/MSPB/Core/Src/: main.c  ti_msp_dl_config.c
control/2025E/Firmware/MSPB/Device/Inc/: gimbal_device.h  mt6816.h  mt6816_config.h  wt901.h  wt901_config.h
control/2025E/Firmware/MSPB/Device/Src/: gimbal_device.c  mt6816.c  wt901.c
control/2025E/Firmware/MSPB/Driver/Inc/: wt901.h  wt901_config.h
control/2025E/Firmware/MSPB/Driver/Src/: wt901.c
control/2025E/Firmware/MSPB/Service/Inc/: communication_service.h  gimbal_task.h  imu_follow_service.h  imu_follow_service_config.h
control/2025E/Firmware/MSPB/Service/Src/: communication_service.c  gimbal_task.c  imu_follow_service.c
control/2025E/Firmware/MSPB/tools/: generate_sysconfig.ps1
control/MSPM0_template/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mspm0g3507.lds  openocd.cfg
control/MSPM0_template/BSP/Inc/: board.h  oled.h
control/MSPM0_template/BSP/Src/: oled.c
control/MSPM0_template/Core/: empty.syscfg
control/MSPM0_template/Core/Inc/: ti_msp_dl_config.h
control/MSPM0_template/Core/Src/: main.c  ti_msp_dl_config.c
control/MSPM0_template/tools/: generate_sysconfig.ps1
control/STM32F407_Template/: .clang-format  .gitignore  .mxproject  CMakeLists.txt  STM32F407_Template.ioc
control/STM32F407_Template/Core/Inc/: beep.h  button.h  config.h  linetrack.h  linetrack_config.h  main.h  rtc.h  sd_config.h  sd_log.h  sdio.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h  wt901.h  wt901_config.h
control/STM32F407_Template/Core/Src/: beep.c  button.c  dma.c  gpio.c  linetrack.c  main.c  rtc.c  sd_diskio_dma.c  sd_log.c  sdio.c  stm32f4xx_it.c  usart.c  wt901.c
control/STM32F407_Template/FATFS/App/: fatfs.c  fatfs.h
control/STM32F407_Template/cmake/stm32cubemx/: CMakeLists.txt
control/STM32F407_Template/svd/: Cortex-M4.svd
vision/: Computer-Vision-Control.py  cvtest_tools.py
vision/PTZ control/: Camera_Control.ioc
vision/PTZ control/Core/Inc/: main.h
vision/PTZ control/Core/Src/: main.c
